fix visual bugs on small sizes

--- a/src/components/carousels/homePageCarousel/carousel-slick.css
+++ b/src/components/carousels/homePageCarousel/carousel-slick.css
@@ -125,3 +125,7 @@
     line-height: 1.4;
     margin-bottom: 10px;
 }
+
+.inner_slick {
+    margin-bottom: 45px;
+}
